# luavm

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
api/: CMakeLists.txt  lapi.c
api/include/: lapi.h
common/: CMakeLists.txt
common/chunk/: chunk.c  chunk.h  value.c  value.h
common/memory/: gc.c  gc.h  memory.c  memory.h
common/metatable/: metatable.h
common/native/: native_functions.c  native_functions.h
common/object/: objclosure.c  objclosure.h  object.c  object.h  objfunction.c  objfunction.h  objnativefunction.c  objnativefunction.h  objstring.c  objstring.h  objtable.c  objtable.h  objupvalue.c  objupvalue.h  value.c  value.h
common/state/: vmstate.h
common/table/: hash.c  hash.h  table.c  table.h
common/utils/: disassemble.c  disassemble.h  file_utils.c  file_utils.h  utils.h
common/var/: locals.c  locals.h  reserved_var.c  reserved_var.h  upvalues.h
compiler/: CMakeLists.txt  compiler.c  compiler.h  lexer.c
compiler/include/: compiler.h  lexer.h  token.h
compiler/src/: compiler.c
demo/: binary_tree.lua  twosum.lua
lexer/: CMakeLists.txt  lexer.c  lexer.h  token.h
lexer/include/: lexer.h
lib/: CMakeLists.txt
lib/base/: baselib.c  baselib.h
lib/math/: mathlib.c  mathlib.h
lib/string/: stringlib.c  stringlib.h
lib/table/: tablelib.c  tablelib.h
lib/utils/: libutils.h
luavm/: luavm.c
src/: main.c
testing/: CMakeLists.txt
testing/cmake/: RunAndCompare.cmake
testing/compiler/: chunk_test.c
testing/data/: jump_test_input.lua  string_lib_test_input.lua  stringlib_test_input.lua  tablelib_test_input.lua  token_test_input.lua
testing/data/benchmarks/: bench.lua  fib.lua  heapsort.lua
testing/data/expected/: assign_test.expected  baselib_test.expected  closure_and_iter_test.expected  expression_test.expected  function_test.expected  jump_test.expected  multret_test.expected  objtable_test.expected  string_lib_test.expected  stringlib_test.expected  tablelib_test.expected
testing/data/unit/: assign_test_input.lua  baselib_test_input.lua  closure_and_iter_test_input.lua  expression_test_input.lua  function_test_input.lua  jump_test_input.lua  multret_test_input.lua  objtable_test_input.lua
testing/function/: calculation_test.c  call_test.c  expression_test.c  hash_test.c  jump_test.c  local_var_test.c  objtable_test.c  string_test.c  table_test.c
testing/lexer/: token_test.c
testing/lib/: tablelib_test.c
vm/: CMakeLists.txt  vm.c  vm.h
vm/include/: vm.h  vmdo.h
vm/src/: vm.c
